changed meteor.call to global function because didn't need server-side method for abbreviate_state().

--- a/client/views/legiScan.html
+++ b/client/views/legiScan.html
@@ -1,6 +1,6 @@
 <template name="legiScan">
-  <p>Find Local Laws:</p>
 <form id="search">
+  <p>Search for an issue in {{location}}: </p>
     <input id="query" name="query" type="text" />
     <button class="button">Go!</button>
 </form>
