reactive input for other state lookup

--- a/client/views/legiScan.html
+++ b/client/views/legiScan.html
@@ -1,5 +1,5 @@
 <template name="legiScan">
-<form id="search">
+<form id="legi-search">
   <p>Search for an issue in {{location}}: </p>
     <input id="query" name="query" type="text" />
     <button class="button">Go!</button>
