--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -2,9 +2,9 @@
 	{{#if locating}}
 		<p>Locating...</p>
 	{{/if}}
-	<p> If your not located in {{location.region}}, {{location.postal}}--search here: 
-		<form id="zip-field">
-	    <input id="zip" name="zip-field" type="text" />
+	<p> If your not located in {{location.region}}, {{location.postal}}--enter your state here: 
+		<form id="state-form">
+	    <input type="text" id="self-state" name="self-state" size="4" value="{{location.abState}}" />
 	    <button class="button">Look Me Up</button>
 		</form>
 	</p>
