removed empty list items

--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -2,7 +2,7 @@
 	{{#if locating}}
 		<p>Locating...</p>
 	{{/if}}
-	<p> If your not located in {{location.region}}, {{location.postal}}--enter your state here: 
+	<p> Not in {{location.region}}? Enter another state here: 
 		<form id="state-form">
 	    <input type="text" id="self-state" name="self-state" size="4" value="{{location.abState}}" />
 	    <button class="button">Look Me Up</button>
