--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -1,11 +1,11 @@
 <template name="ipInfo">
-	{{#if locating}}
-		<p>Locating...</p>
-	{{/if}}
-	<p> Not in {{location.region}}? Enter another state here: 
-		<form id="state-form">
-	    <input type="text" id="self-state" name="self-state" size="4" value="{{location.abState}}" />
-	    <button class="button">Look Me Up</button>
+	<div id="ipInfo" class="ui container segment">	
+		<form id="state-form" class="ui {{locating}} form">
+			<div class="field">
+				<label> Not in {{location.region}}? Enter another state here: </label>
+		    <input type="text" id="self-state" name="self-state" size="4" placeholder="{{location.abState}}" />
+		  </div>
+	    <button class="ui button">Look Me Up</button>
 		</form>
-	</p>
+	</div>
 </template>
