--- a/client/views/legiScan.html
+++ b/client/views/legiScan.html
@@ -1,27 +1,39 @@
 <template name="legiScan">
-<form id="legi-search">
-  <p>Search for an issue in {{location}}: </p>
-    <input id="query" name="query" type="text" />
-    <button class="button">Go!</button>
-</form>
+<div id="legiScan" class="ui container">
+  <form id="legi-search" class="ui form">
+    <div class="field">
+      <label>Search for an issue in {{location}}: </label>
+      <input id="query" name="query" type="text" placeholder="guns..."/>
+    </div>
+    <button class="ui button">Go!</button>
+  </form>
   <!-- set the data context -->
   {{#with query}}
-  <h3> Bills related to '{{query.query}}' ... </h3>
     <!-- if location has an error property, display it -->
     {{#if error}}
       <p>There was an error:[{{error.errorType}}] [{{error.message}}]!</p>
     {{else}}
-      <div>
-        {{#each queryList}}
-          {{#if this.value.title}}
-            <li class="li-title">{{this.value.title}}</li>
-            <li class="li-billno">{{this.value.state}} - {{this.value.bill_number}}</li>
-            <li class="li-action">{{this.value.last_action_date}} - {{this.value.last_action}}</li>
-            <li class="li-url"><a href="{{this.value.research_url}}">...research this</a></li>
-            <li class="li-url"><a href="{{this.value.text_url}}">{{this.value.text_url}}</a></li>
-          {{/if}}
-        {{/each}}
-      </div>
+    <h3 class="ui center aligned header"> Bills related to '{{query.query}}' ... </h3>
+    <div id="legi-results" class="ui cards container">
+      {{#each queryList}}
+        {{#if this.value.title}}
+        <div class="ui card">
+          <div class="content">
+            <div class="header">{{this.value.state}} - {{this.value.bill_number}} </div>
+          </div>
+          <div class="content">
+            <h4 class="ui sub header">{{this.value.title}}</h4>
+            <ul class="ui bulleted selection list">              
+              <li class="item">{{this.value.last_action_date}} | {{this.value.last_action}}</li>
+              <li class="item"><a href="{{this.value.text_url}}">View Text</a></li>
+              <li class="item"><a href="{{this.value.research_url}}">Research This</a></li>
+            </ul>
+          </div>
+        </div>
+        {{/if}}
+      {{/each}}
+    </div>
     {{/if}} 
   {{/with}}
+</div>
 </template>
