--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -2,8 +2,13 @@
 	<div id="ipInfo" class="ui container segment">	
 		<form id="state-form" class="ui {{locating}} form">
 			<div class="field">
-				<label> Not in {{location.region}}? Enter another state here: </label>
-		    <input type="text" id="self-state" name="self-state" size="4" placeholder="{{location.abState}}" />
+				{{#if location.region}}
+					<label> Not in {{location.region}}? Enter another state here: </label>
+			    <input type="text" id="self-state" name="self-state" size="3" placeholder="{{location.abState}}" />
+		    {{else}}
+					<label> Enter your state here: </label>
+			    <input type="text" id="self-state" name="self-state" size="3" placeholder="NY" />
+		    {{/if}}
 		  </div>
 	    <button class="ui button">Look Me Up</button>
 		</form>
