--- a/client/views/myDistrict.html
+++ b/client/views/myDistrict.html
@@ -1,7 +1,15 @@
 <template name="myDistrict">
-	<div style="border: 1px solid red" class="ui segment">
+	<div style="border: 1px solid red" class="ui segment cards" >
 		{{#each legislators}}
-			<li>{{this}}</li>
+		<ul class="ui card">
+			<li>{{this.first_name}} {{this.last_name}} {{this.name_suffix}} ({{this.party}})</li>
+			<li>{{this.oc_email}}</li>
+			<p>{{this.office}} <br />
+				{{this.phone}}</p>
+			<li><a href="{{this.facebook_id}}">Facebook</a></li>
+			<li><a href="{{this.twitter_id}}">Twitter</a></li>
+			<li><a href="{{this.youtube_id}}">Youtube</a></li>
+		</ul>
 		{{/each }}
 	</div>
 </template>
