some css to legislators

--- a/client/lib/semantic-ui/theme.config.import.less
+++ b/client/lib/semantic-ui/theme.config.import.less
@@ -19,7 +19,7 @@
 
 /* Global */
 @site       : 'material';
-@reset      : 'default';
+@reset      : 'resetcss';
 
 /* Elements */
 @button     : 'material';
