--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -10,9 +10,13 @@
 	margin: auto
 	padding: 1rem
 
+
 #legislators 
 	margin: auto
 	padding: 1rem
 
 	.card
 		max-width: 15rem 
+		
+	#social
+		min-height: 1rem
