--- a/client/views/myDistrict.html
+++ b/client/views/myDistrict.html
@@ -1,14 +1,19 @@
 <template name="myDistrict">
-	<div id="legislators" class="ui cards" >
+	<div id="legislators" class="ui cards stackable container" >
 		{{#each legislators}}
 		<div class="ui {{party_color}} card">
+
 			<div class="image">
 				<img class="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
 			</div>
+
 			<div class="content">
-				<h3> <a class="header" href="{{this.website}}">{{this.first_name}} {{this.last_name}} {{this.name_suffix}} ({{this.party}})</a></h3>
-				<div class="meta"> 
+				<a class="header" href="{{this.website}}">{{this.first_name}} {{this.last_name}} {{this.name_suffix}} ({{this.party}})</a>
+				
+				<div class="meta">
+
 				</div>
+
 				<ul>
 					<li>Term Started on <span class="date">{{this.term_start}}.</span> </li>
 					<li>Term Ends on <span class="date">{{this.term_end}}. </span> </li>
@@ -18,20 +23,22 @@
 					<br />
 					{{this.phone}}
 				</p>
-				<a href="{{this.facebook_id}}"> 
-					<i class="facebook square icon"></i>
-				</a>
-				<a href="{{this.twitter_id}}">
-					<i class="twitter square icon"></i>
-				</a>
-				<a href="{{this.youtube_id}}">
-					<i class="youtube icon"></i>
-				</a>
+			</div>
 
+			<div>
+				<a href="http://www.facebook.com/{{this.facebook_id}}"> 
+					<i class="facebook icon"></i>
+				</a>
+				<a href="http://www.twitter.com/{{this.twitter_id}}">
+					<i class="ui twitter square icon"></i>
+				</a>
+				<a href="http://www.youtube.com/{{this.youtube_id}}">
+					<i class="ui youtube icon"></i>
+				</a>
 			</div>
-			<div >
-				<a class="ui bottom attached button" href="{{this.contact_form}}">Contact</a>
-			</div>
+
+			<a class="ui bottom attached button" href="{{this.contact_form}}">Contact</a>
+
 		</div>
 		{{/each }}
 	</div>
