--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -4,7 +4,7 @@
 			<div class="field">
 				{{#if location.region}}
 					<label> Not in {{location.region}}? Enter another state or zipcode here: </label>
-			    <input type="text" id="self-state" name="self-state" size="6" placeholder="{{location.abState}}... " />
+			    <input type="text" id="self-state" name="self-state" size="6" placeholder="{{location.abState}}... {{location.postal}}..." />
 		    {{else}}
 					<label> Enter your state or zipcode here: </label>
 			    <input type="text" id="self-state" name="self-state" size="6" placeholder="NY" />
