--- a/client/views/myDistrict.html
+++ b/client/views/myDistrict.html
@@ -1,7 +1,7 @@
 <template name="myDistrict">
 	<div id="legislators" class="ui container" >
 
-		<h2 class="ui header"> Representatives for {{location.postal}}, {{location.region}}.</h2>
+		<h2 class="ui header"> Representatives for {{location.postal}}, {{location.abState}}.</h2>
 
 		<div class="ui cards stackable">
 			{{#each legislators}}
