--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -3,11 +3,11 @@
 		<form id="state-form" class="ui {{locating}} form">
 			<div class="field">
 				{{#if location.region}}
-					<label> Not in {{location.region}}? Enter another state or zipcode here: </label>
-			    <input type="text" id="self-state" name="self-state" size="6" placeholder="{{location.abState}}... {{location.postal}}..." />
+					<label> Not in {{location.state}}? Enter your zipcode here: </label>
+			    <input type="text" id="self-state" name="self-state" size="6" placeholder="{{location.postal}}..." />
 		    {{else}}
-					<label> Enter your state or zipcode here: </label>
-			    <input type="text" id="self-state" name="self-state" size="6" placeholder="NY" />
+					<label> Enter your zipcode here: </label>
+			    <input type="text" id="self-state" name="self-state" size="6" placeholder="90210" />
 		    {{/if}}
 		  </div>
 		</form>
