fixed blank legiscan location

--- a/client/views/legiScan.html
+++ b/client/views/legiScan.html
@@ -2,7 +2,7 @@
 <div id="legiScan" class="ui container">
   <form id="legi-search" class="ui form">
     <div class="field">
-      <label>Search for an issue in {{state}}: </label>
+      <label>Search for an issue in {{location}}: </label>
       <input id="query" name="query" type="text" placeholder="guns..."/>
     </div>
   </form>
