styled more and added metadate for chamber and district

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -1,21 +1,9 @@
 //@import _mixins
 //@import _variables
 
-#ipInfo, #legi-search
-  margin: auto
-  padding: 1rem
+body
+  padding: 2rem
 
-#legi-results
-	margin: auto
-	padding: 1rem
-
-
-#legislators 
-	margin: auto
-	padding: 1rem
-
-	.card
-		max-width: 15rem 
-		
-	#social
-		min-height: 1rem
+#legislators
+  .card
+    max-width: 15rem
