--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,12 +4,12 @@
 <body>
 	<div class="ui grid">
 
-		<div class="four wide column ">
+		<div id="left-side" class="three wide column ">
 			{{> ipInfo}}
 			{{> legiScanSearch}}
 		</div>
 
-		<div class="twelve wide column">
+		<div id="right-side" class="thirteen wide column">
 			{{> myDistrict}}
 			{{> legiScanResults }}
 		</div>
