--- a/client/lib/semantic-ui/theme.config.import.less
+++ b/client/lib/semantic-ui/theme.config.import.less
@@ -26,7 +26,7 @@
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
-@header     : 'default';
+@header     : 'bookish';
 @icon       : 'default';
 @image      : 'default';
 @input      : 'default';
