--- a/client/views/legiScan-search.html
+++ b/client/views/legiScan-search.html
@@ -4,7 +4,7 @@
     <form id="legi-search" class="ui form">
       <div class="field">
         <label>Search for an issue in {{location}}: </label>
-        <input id="query" name="query" type="text" placeholder="firearms..." value="firearms"/>
+        <input id="query" name="query" type="text" placeholder="firearms..."/>
       </div>
     </form>
   </div>
