--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -1,9 +1,13 @@
 //@import _mixins
-//@import _variables
+@import _variables
 
+html
+	font-size: $BASEFONTSIZE
+	
 body
   padding: 2rem
 
 #legislators
   .card
-    max-width: 16rem
+    max-width: 13rem
+
