--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -1,13 +1,13 @@
 <template name="legiScanResults">
-  <div id="right-results" class="twelve wide right floated column">
+  <div id="right-results" class="">
     <!-- set the data context -->
     {{#with query}}
       <!-- if location has an error property, display it -->
       {{#if error}}
         <p>There was an error:[{{error.errorType}}] [{{error.message}}]!</p>
       {{else}}
-      <h3 class="ui center aligned header"> Bills related to '{{query.query}}' ... </h3>
-      <div id="legi-results" class="ui cards container">
+      <h3 class="ui center aligned header segment"> Bills related to '{{query.query}}' ... </h3>
+      <div id="legi-results" class="ui cards centered">
         {{#each queryList}}
           {{#if this.value.title}}
           <div class="ui card">
