centered results and add conditionals to social icons

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -3,11 +3,15 @@
 
 html
 	font-size: $BASEFONTSIZE
-	
+
 body
   padding: 2rem
 
+.segment
+	padding: 1rem !important
+
 #legislators
+  margin: 1rem
   .card
     max-width: 13rem
 
