--- a/client/views/myDistrict.html
+++ b/client/views/myDistrict.html
@@ -7,7 +7,7 @@
 			<div class="ui {{party_color}} card">
 
 				<div class="image">
-					<img class="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
+					<img clawss="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
 				</div>
 
 				<div class="content">
@@ -30,15 +30,21 @@
 					<a href="mailto:{{this.oc_email}}"> 
 						<i class="inbox large icon"></i>
 					</a>					
-					<a href="http://www.facebook.com/{{this.facebook_id}}"> 
-						<i class="facebook  large icon"></i>
-					</a>
-					<a href="http://www.twitter.com/{{this.twitter_id}}">
-						<i class="ui twitter  large icon"></i>
-					</a>
-					<a href="http://www.youtube.com/{{this.youtube_id}}">
-						<i class="ui youtube  large icon"></i>
-					</a>
+					{{#if this.facebook_id}}
+						<a href="http://www.facebook.com/{{this.facebook_id}}"> 
+							<i class="facebook  large icon"></i>
+						</a>
+					{{/if}}
+					{{#if this.twitter_id}}
+						<a href="http://www.twitter.com/{{this.twitter_id}}">
+							<i class="ui twitter  large icon"></i>
+						</a>
+					{{/if}}
+					{{#if this.youtube_id}}
+						<a href="http://www.youtube.com/{{this.youtube_id}}">
+							<i class="ui youtube  large icon"></i>
+						</a>
+					{{/if}}
 				</div>
 
 				<a class="ui bottom attached button" href="{{this.contact_form}}">Contact</a>
