added new method and settings.json, but broke state lookup somehow

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -12,7 +12,9 @@
 
 		<div id="right-side" class="thirteen wide column">
 			{{> myDistrict}}
+			{{> wordCloud}}
 			{{> legiScanResults }}
+
 		</div>
 
 	</div>
