--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -1,5 +1,5 @@
 <template name="legiScanResults">
-  <div id="right-results" class="">
+  <div id="legiResults" class="">
     <!-- set the data context -->
     {{#with query}}
       <!-- if location has an error property, display it -->
