--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -7,11 +7,13 @@ html
 body
   padding: 2rem
 
+#left-side
+	position: relative
+
 .segment
 	padding: 1rem !important
 
 #legislators
-  margin: 1rem
   .card
     max-width: 13rem
 
