fixed it, had wrong api keys

--- a/client/views/wordCloud.html
+++ b/client/views/wordCloud.html
@@ -1,5 +1,5 @@
 <template name="wordCloud">
-	<div id="wordCloud">
+	<div id="word_cloud">
 		<canvas id="wcCanvas" class="canvas">
 		</canvas>
 	</div>
