--- a/client/views/ipInfo.html
+++ b/client/views/ipInfo.html
@@ -3,7 +3,7 @@
 			<form id="state-form" class="ui {{locating}} form">
 				<div class="field">
 					{{#if location.region}}
-						<label> Not in {{location.state}}? Enter your zipcode here: </label>
+						<label> Not in {{location.region}}? Enter your zipcode here: </label>
 				    <input type="text" id="self-state" name="self-state" size="6" placeholder="{{location.postal}}..." />
 			    {{else}}
 						<label> Enter your zipcode here: </label>
