Returned Bills are ordered by last_action_date and sidebar position is fixed - these are required to ----- Fixes any sidebar content in place and now appears to scroll with content Returned bills from a users query are ordered by most recent next action date

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -7,8 +7,10 @@ html
 body
   padding: 2rem
 
+// To allow the sidebar to scroll with the rest of the page
 #left-side
-	position: relative
+  position: fixed
+  right: 0
 
 .segment
 	padding: 1rem !important
