--- a/client/views/legiScan-search.html
+++ b/client/views/legiScan-search.html
@@ -1,12 +1,10 @@
 <template name="legiScanSearch">
-	<div id="legiSearch">
-	  <div class="">
-	    <form id="legi-search" class="ui form">
-	      <div class="field">
-	        <label>Search for an issue in {{location}}: </label>
-	        <input id="query" name="query" type="text" placeholder="firearms..."/>
-	      </div>
-	    </form>
-	  </div>
+	<div id="legiSearch" class="ui segment">
+    <form id="legi-search" class="ui form">
+      <div class="field">
+        <label>Search for an issue in {{location}}: </label>
+        <input id="query" name="query" type="text" placeholder="firearms..."/>
+      </div>
+    </form>
 	</div>
 </template>
