--- a/client/views/myDistrict.html
+++ b/client/views/myDistrict.html
@@ -6,8 +6,8 @@
 			{{#each legislators}}
 			<div class="ui {{party_color}} card">
 
-				<div class="image">
-					<img clawss="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
+				<div class="ui image">
+					<img class="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
 				</div>
 
 				<div class="content">
