--- a/client/views/wordCloud.html
+++ b/client/views/wordCloud.html
@@ -1,6 +1,6 @@
 <template name="wordCloud">
 	<div id="word_cloud">
-		<canvas id="wcCanvas" class="canvas">
+		<canvas id="wcloud" class="ui  canvas">
 		</canvas>
 	</div>
 </template>
