--- a/client/views/index.html
+++ b/client/views/index.html
@@ -17,14 +17,16 @@
 
 </head>
 <body>
-	<div class="ui grid">
+	<div id="mainWindow" class="ui grid">
 
-		<div id="right-side" class="three wide column ">
+		<div id="sideBar" class="ui three wide column">
+
 			{{> ipInfo}}
 			{{> legiScanSearch}}
+
 		</div>
 
-		<div id="left-side" class="thirteen wide column">
+		<div id="content" class="ui thirteen wide column">
 			{{> myDistrict}}
 			{{> wordCloud}}
 			{{> legiScanResults }}
