testing autotrackers and reactive computations

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -15,8 +15,7 @@
 $scrn-xxl: 160rem; //1440px
 $scrn-xl: 142.2rem; //1280px
 $scrn-lg: 100rem; //900px
-//$scrn-md: 74.11rem; //667px
-$scrn-md: 800px; //667px
+$scrn-md: 74.11rem; //667px
 $scrn-sm: 41.67rem; //375px
 
 // ---------------------->>>  COLORS  <<<<--------------------------------- //
