--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -26,5 +26,6 @@ body
     	max-width: 10rem
 
 #wcloud
-	//width: 600px
-	border: 1px solid red
+  width: 100%
+  min-height: 400px
+  border: 1px solid #f00
