working WordCloud, redraws on legiscan search event

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -26,6 +26,5 @@ body
     	max-width: 10rem
 
 #wcloud
-  width: 100%
-  min-height: 400px
-  border: 1px solid #f00
+  //width: 100%
+  min-height: 200px
