--- a/client/views/index.html
+++ b/client/views/index.html
@@ -28,7 +28,7 @@
 
 		<div id="content" class="ui thirteen wide column">
 			{{> myDistrict}}
-			{{> wordCloud}}
+			{{! > wordCloud}}
 			{{> legiScanResults }}
 
 		</div>
