--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -1,4 +1,5 @@
 <template name="legiScanResults">
+  {{> wordCloud}}
   <div id="legiResults" class="">
     <!-- set the data context -->
     {{#with query}}
