changed legiscan search from event submit to reactive helper; this so that view re-renders when zipcode changes. query persists for second search because of session variable.    WOOOOO

--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -7,7 +7,7 @@
       {{#if error}}
         <p>There was an error:[{{error.errorType}}] [{{error.message}}]!</p>
       {{else}}
-      <h3 class="ui center aligned header segment"> Bills related to '{{query.query}}' ... </h3>
+      <h3 class="ui center aligned header segment"> Bills related to '{{query}}' ... </h3>
       <div id="legi-results" class="ui cards centered">
         {{#each queryList}}
           {{#if this.value.title}}
