--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -1,12 +1,14 @@
 @import _mixins
 @import _meyersReset
 @import _variables
+@import _palette-dBlueTetrad
 
 html
 	font-size: $BASEFONTSIZE
 
 body
   padding: 1.5rem
+  background-color: $color-primary-2
 
 // To allow the sidebar to scroll with the rest of the page
 #sideBar
