--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -1,5 +1,5 @@
 <template name="legiScanResults">
-  {{> wordCloud}}
+  {{! > wordCloud}}
   <div id="legiResults" class="">
     <!-- set the data context -->
     {{#with query}}
