committees in metadata

--- a/client/views/committees.html
+++ b/client/views/committees.html
@@ -2,7 +2,7 @@
 <div>
 <h4>Committee Memberships: </h4>
 	{{#each committees}}
-		<span>{{this.name}} Committees</span>
+		<span>{{this.name}}</span>
 	{{/each}}
 </div>
 </template>
