adding huffpost pollster API and simple:Reactive-method package

--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -1,5 +1,7 @@
 <template name="legiScanResults">
-  {{! > wordCloud}}
+  
+  {{ > wordCloud}}
+  
   <div id="legiResults" class="">
     <!-- set the data context -->
     {{#with query}}
