--- a/client/views/myReps.html
+++ b/client/views/myReps.html
@@ -19,7 +19,9 @@
 						{{/if}}
 						<a>{{this.chamber}}</a> 
 						<a><span class="date">({{this.term_start}}</span></a>-<a><span class="date">{{this.term_end}})</span></a>
-						{{> committees}}
+						
+						{{! > committees}}
+						
 						</div>
 						
 						<p>{{this.office}} 
