--- a/client/views/pollster.html
+++ b/client/views/pollster.html
@@ -1,8 +1,14 @@
 <template name="pollster">
-<div>
-<h4>Committee Memberships: </h4>
-	{{#each chart}}
-		<span>{{this.name}}</span>
-	{{/each}}
-</div>
+	<div class="ui container">
+		<h3>Huffington Polls: </h3>
+		<div class="ui cards">
+			{{#each charts}}
+				{{#if estimates}}
+				<div class="ui segment">
+						{{> highchartsHelper chartId=this.slug chartWidth="20%" charHeight="20%" chartObject=topChart}}
+				</div>
+				{{/if}}
+			{{/each}}
+		</div>
+	</div>
 </template>
