--- a/client/views/pollster.html
+++ b/client/views/pollster.html
@@ -1,11 +1,11 @@
 <template name="pollster">
-	<div class="ui container">
-		<h3>Huffington Polls: </h3>
+	<div id="charts" class="ui container">
+		<h3 class="ui medium header">Huffington Polls: </h3>
 		<div class="ui cards">
 			{{#each charts}}
 				{{#if estimates}}
-				<div class="ui segment">
-						{{> highchartsHelper chartId=this.slug chartWidth="20%" charHeight="20%" chartObject=topChart}}
+				<div class="chart ui card">
+						{{> highchartsHelper chartId=this.slug chartWidth="100%" charHeight="100%" chartObject=topChart}}
 				</div>
 				{{/if}}
 			{{/each}}
