results from bills open up into a separate page

--- a/client/styles/index.sass
+++ b/client/styles/index.sass
@@ -19,3 +19,27 @@ body
   .card
     max-width: 13rem
 
+.centered
+  text-align: center
+
+.democratic-text
+  color: $democratic-blue
+
+.republican-text
+  color: $republican-red
+
+.sponsors-header
+  margin-top: 40px !important
+
+#sponsorPieGraphContainer
+  margin-left: 45px
+
+.keyword-list ul li
+  display: inline !important
+
+.keyword-list ul
+  list-style-type: none
+  margin: 0 !important
+  padding: 0 !important
+
+
