--- a/client/views/legiScan-results.html
+++ b/client/views/legiScan-results.html
@@ -20,6 +20,7 @@
                 <li class="item">{{this.value.last_action_date}} | {{this.value.last_action}}</li>
                 <li class="item"><a href="{{this.value.text_url}}">View Text</a></li>
                 <li class="item"><a href="{{this.value.research_url}}">Research This</a></li>
+                <li class="item"><a href="bill/{{this.value.bill_id}}" target="_blank">Bill Detail</a></li>
               </ul>
             </div>
           </div>
