added nytimes bills sponsored by legislators, but exceeding the api call limit so not returning results for all legislators (2 of three api calls return success)

--- a/client/views/myReps.html
+++ b/client/views/myReps.html
@@ -19,9 +19,6 @@
 						{{/if}}
 						<a>{{this.chamber}}</a> 
 						<a><span class="date">({{this.term_start}}</span></a>-<a><span class="date">{{this.term_end}})</span></a>
-						
-						{{! > committees}}
-						
 						</div>
 						
 						<p>{{this.office}} 
@@ -29,6 +26,11 @@
 							{{this.phone}}
 						</p>
 
+					</div>
+
+					<div class="extra content">
+						{{! > committees}}
+						{{> nybills}}
 					</div>
 
 				<div id="social" class="ui center aligned extra content">
