--- a/client/views/myReps.html
+++ b/client/views/myReps.html
@@ -30,7 +30,7 @@
 
 					<div class="extra content">
 						{{! > committees}}
-						{{> nybills}}
+						{{! > nybills}}
 					</div>
 
 				<div id="social" class="ui center aligned extra content">
