re-styling for horizontal segments per rep, to allow for more data on a page per person.

--- a/client/views/nybills.html
+++ b/client/views/nybills.html
@@ -14,7 +14,7 @@
 <div id="sponbills" class="ui row">
 {{#each reps}}
 <div class="ui cards">
-	{{#each spon_bills}}
+	{{#each spons_bills}}
 		<h4>Bills sponsored by {{name}}</h4>
 			{{#each bills}}
 				<div class="ui card">
