--- a/client/views/myReps.html
+++ b/client/views/myReps.html
@@ -1,63 +1,70 @@
 <template name="myReps">
 	<div id="legislators" class="ui" >
-		<h3 class="ui center aligned header segment"> Representatives for {{location.postal}}, {{location.state}}.</h3>
+		<h3 class="ui center aligned header"> Representatives for {{location.postal}}, {{location.state}}.</h3>
 
-		<div class="ui cards fluid centered">
+		<div class="ui fluid container">
+
 			{{#each legislators}}
-			<div class="ui {{party_color}} card">
+			<div class="ui horizontal segments">
+				<div class="ui {{party_color}} card">
 
-				<div class="ui image">
-					<img class="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
-				</div>
+					<div class="ui image">
+						<img class="ui image" src="https://theunitedstates.io/images/congress/225x275/{{this.bioguide_id}}.jpg" />
+					</div>
 
-				<div class="content">
-					<a class="ui tiny header" href="{{this.website}}">{{this.first_name}} {{this.last_name}} {{this.name_suffix}} ({{this.party}})</a>
-					
-					<div class="meta">
-						{{#if this.district}}
-							<a>District {{this.district}}, </a> 
-						{{/if}}
-						<a>{{this.chamber}}</a> 
-						<a><span class="date">({{this.term_start}}</span></a>-<a><span class="date">{{this.term_end}})</span></a>
-						</div>
+					<div class="content">
+						<a class="ui tiny header" href="{{this.website}}">{{this.first_name}} {{this.last_name}} {{this.name_suffix}} ({{this.party}})</a>
 						
-						<p>{{this.office}} 
-							<br />
-							{{this.phone}}
-						</p>
+						<div class="meta">
+							{{#if this.district}}
+								<a>District {{this.district}}, </a> 
+							{{/if}}
+							<a>{{this.chamber}}</a> 
+							<a><span class="date">({{this.term_start}}</span></a>-<a><span class="date">{{this.term_end}})</span></a>
+							</div>
+							
+							<p>{{this.office}} 
+								<br />
+								{{this.phone}}
+							</p>
 
+						</div>
+
+						<div class="extra content">
+							{{! > committees}}
+							{{! > nybills}}
+						</div>
+
+					<div id="social" class="ui center aligned extra content">
+						<a href="mailto:{{this.oc_email}}"> 
+							<i class="inbox large icon"></i>
+						</a>					
+						{{#if this.facebook_id}}
+							<a href="http://www.facebook.com/{{this.facebook_id}}"> 
+								<i class="facebook  large icon"></i>
+							</a>
+						{{/if}}
+						{{#if this.twitter_id}}
+							<a href="http://www.twitter.com/{{this.twitter_id}}">
+								<i class="ui twitter  large icon"></i>
+							</a>
+						{{/if}}
+						{{#if this.youtube_id}}
+							<a href="http://www.youtube.com/{{this.youtube_id}}">
+								<i class="ui youtube  large icon"></i>
+							</a>
+						{{/if}}
 					</div>
 
-					<div class="extra content">
-						{{! > committees}}
-						{{! > nybills}}
-					</div>
-
-				<div id="social" class="ui center aligned extra content">
-					<a href="mailto:{{this.oc_email}}"> 
-						<i class="inbox large icon"></i>
-					</a>					
-					{{#if this.facebook_id}}
-						<a href="http://www.facebook.com/{{this.facebook_id}}"> 
-							<i class="facebook  large icon"></i>
-						</a>
-					{{/if}}
-					{{#if this.twitter_id}}
-						<a href="http://www.twitter.com/{{this.twitter_id}}">
-							<i class="ui twitter  large icon"></i>
-						</a>
-					{{/if}}
-					{{#if this.youtube_id}}
-						<a href="http://www.youtube.com/{{this.youtube_id}}">
-							<i class="ui youtube  large icon"></i>
-						</a>
-					{{/if}}
+					<a class="ui bottom attached button" href="{{this.contact_form}}">Contact</a>
 				</div>
-
-				<a class="ui bottom attached button" href="{{this.contact_form}}">Contact</a>
-
+				<div class="ui segment">
+					<h4>Sponsored Bills: </h4>
+					{{> sponsoredBills2}}
+				</div>
 			</div>
 			{{/each }}
+
 		</div>
 	</div>
 </template>
