added election events view/helper so that you can click on them and get the polling stations nearest your location (if you are in that town) #7

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -35,7 +35,8 @@
 		</div>
 
 		<div id="content" class="ui thirteen wide column">
-			{{> myReps}}
+			{{> elections}}
+            {{> myReps}}
 			{{> pollster}}
 			{{> legiScanResults }}
 
