--- a/client/lib/styles/index.sass
+++ b/client/lib/styles/index.sass
@@ -3,6 +3,8 @@
 @import _variables
 @import _palette-dBlueTetrad
 
+@import ../../gCivic/lib/gCivic  
+
 html
 	font-size: $BASEFONTSIZE
 
@@ -58,3 +60,7 @@ body
 
 #charts
   border: 1px solid blue
+
+.office-name
+  font-size: $lg-font-size
+  color: red
