added dimmer effect, but brokesomehow

--- a/client/lib/semantic-ui/themes/basic/views/card.variables.import.less
+++ b/client/lib/semantic-ui/themes/basic/views/card.variables.import.less
@@ -1,12 +1,17 @@
+/*
+  DO NOT MODIFY - This file has been generated and will be regenerated
+  Semantic UI v2.1.4
+*/
 /*******************************
-    User Variable Overrides
+             Card
 *******************************/
 
+/*-------------------
+         View
+--------------------*/
 
-@width: 150px;
+@width: 250px;
 @background: transparent;
-/*
-
 @border: none;
 @boxShadow: none;
 
@@ -32,5 +37,3 @@
 
 @linkHoverBackground: transparent;
 @linkHoverBoxShadow: none;
-
-*/
