--- a/client/lib/styles/index.sass
+++ b/client/lib/styles/index.sass
@@ -2,8 +2,7 @@
 @import _meyersReset
 @import _variables
 @import _palette-dBlueTetrad
-
-@import ../../gCivic/lib/gCivic  
+@import ../../gCivic/gCivic  
 
 html
 	font-size: $BASEFONTSIZE
@@ -60,7 +59,3 @@ body
 
 #charts
   border: 1px solid blue
-
-.office-name
-  font-size: $lg-font-size
-  color: red
