--- a/client/lib/semantic-ui/theme.config.import.less
+++ b/client/lib/semantic-ui/theme.config.import.less
@@ -26,7 +26,7 @@
 @container  : 'default';
 @divider    : 'default';
 @flag       : 'default';
-@header     : 'bookish';
+@header     : 'default';
 @icon       : 'default';
 @image      : 'default';
 @input      : 'default';
@@ -66,7 +66,7 @@
 
 /* Views */
 @ad         : 'default';
-@card       : 'basic';
+@card       : 'default';
 @comment    : 'default';
 @feed       : 'default';
 @item       : 'default';
