cherrypicking and merging changes, (elections and index)

--- a/client/imports/ui/components/elections.html
+++ b/client/imports/ui/components/elections.html
@@ -1,16 +1,14 @@
 <template name="elections">
-<div id="election-container">
-	<h2 class="ui header">Upcoming Elections:</h2>
+		{{#with data}}
+	<h2>Upcoming Elections:</h2>
+	<div>
 
-	<div class="ui segments">
-	{{#with data}}
 		{{#each elections}}
 		<div class="ui segment">
 				<h3>{{name}} - {{electionDay}}</h3>
 		</div>
 		{{/each}}
-	{{/with}}
 	</div>
-</div>
+	{{/with}}
 </template>
 
